feat: update abseil to 20220623.1

--- a/debian/rules
+++ b/debian/rules
@@ -38,11 +38,11 @@ override_dh_auto_clean:
 	$(RM) -r $(CURDIR)/shared
 
 override_dh_auto_configure:
-	dh_auto_configure -Bstatic -- -DCMAKE_CXX_STANDARD=17 -DBUILD_SHARED_LIBS=OFF
+	dh_auto_configure -Bstatic -- -DCMAKE_C_COMPILER=$(DEB_HOST_GNU_TYPE)-gcc-12 -DCMAKE_CXX_COMPILER=$(DEB_HOST_GNU_TYPE)-g++-12 -DCMAKE_CXX_STANDARD=17 -DBUILD_SHARED_LIBS=OFF
 ifeq ($(ABSL_RUN_TESTS),ON)
-	dh_auto_configure -Bshared -- -DCMAKE_CXX_STANDARD=17 -DBUILD_SHARED_LIBS=ON -DBUILD_TESTING=ON -DABSL_BUILD_TESTING=ON -DABSL_USE_GOOGLETEST_HEAD=OFF
+	dh_auto_configure -Bshared -- -DCMAKE_C_COMPILER=$(DEB_HOST_GNU_TYPE)-gcc-12 -DCMAKE_CXX_COMPILER=$(DEB_HOST_GNU_TYPE)-g++-12 -DCMAKE_CXX_STANDARD=17 -DBUILD_SHARED_LIBS=ON -DBUILD_TESTING=ON -DABSL_BUILD_TESTING=ON -DABSL_USE_GOOGLETEST_HEAD=OFF
 else
-	dh_auto_configure -Bshared -- -DCMAKE_CXX_STANDARD=17 -DBUILD_SHARED_LIBS=ON
+	dh_auto_configure -Bshared -- -DCMAKE_C_COMPILER=$(DEB_HOST_GNU_TYPE)-gcc-12 -DCMAKE_CXX_COMPILER=$(DEB_HOST_GNU_TYPE)-g++-12 -DCMAKE_CXX_STANDARD=17 -DBUILD_SHARED_LIBS=ON
 endif
 
 override_dh_auto_build:
